codepkg/objects/Agency_Special_Equipment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Special_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Special Equipment</label>
        <referenceTo>Agency_Special_Equipment__c</referenceTo>
        <relationshipLabel>Agency Special Equipment Line Items</relationshipLabel>
        <relationshipName>Agency_Special_Equipment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <label>Current Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEMA_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FEMA CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Equipment_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Equipment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agency Special Equipment Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Equipment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Special Equipment Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>